labs/lab03-configmaps-secrets/manifests/deployment.yaml
# Versión actualizada del Deployment del Lab 2: RESPONSE ahora viene del
# ConfigMap, y dos nuevas env vars vienen del Secret, en vez de un valor
# hardcodeado. Completa los TODO, y luego:
#   oc apply -f manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
    lab: lab03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
        lab: lab03
    spec:
      containers:
        - name: hello-openshift
          image: docker.io/openshift/hello-openshift:v3.9.0
          ports:
            - containerPort: 8080
