labs/lab03-configmaps-secrets/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podpet
  labels:
    app: podpet
    lab: lab03
spec:
  selector:
    app: podpet
  ports:
    - name: http
      port: 8080
      targetPort: 8080
