labs/lab03-configmaps-secrets/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: podpet
  labels:
    app: podpet
    lab: lab03
spec:
  to:
    kind: Service
    name: podpet
  port:
    targetPort: http
